update staging readings

--- a/2-dbt-staging-and-sources/2a-staging-lab-solution.ipynb
+++ b/2-dbt-staging-and-sources/2a-staging-lab-solution.ipynb
@@ -15,20 +15,15 @@
    "source": [
     "```sql\n",
     "with source as (\n",
-    "    SELECT * FROM public.suppliers\n",
+    "    SELECT * FROM {{ source('rds', 'suppliers') }}\n",
     "),\n",
     "renamed as (\n",
     "    SELECT supplier_id, company_name,\n",
     "     SPLIT_PART(contact_name, ' ', 1) as contact_first_name,\n",
     "     SPLIT_PART(contact_name, ' ', -1) as contact_last_name,\n",
-    "     contact_title, \n",
-    "     REPLACE(TRANSLATE(phone, '(,),-,.', ''), ' ', '') as phone,\n",
-    "     address, \n",
-    "     city,\n",
-    "    postal_code,\n",
-    "      region,\n",
-    "       fax,\n",
-    "        homepage FROM source\n",
+    "     contact_title, REPLACE(TRANSLATE(phone, '(,),-,.', ''), ' ', '') as phone,\n",
+    "     address, city, postal_code,\n",
+    "      region, fax, homepage, _fivetran_synced, _fivetran_deleted FROM source\n",
     "), final as (\n",
     "    SELECT supplier_id, company_name, \n",
     "    contact_first_name, contact_last_name,\n",
@@ -39,11 +34,11 @@
     "       SUBSTRING(phone, 7, 4) \n",
     "       END as phone,\n",
     "       address, city, postal_code,\n",
-    "      region, fax, homepage\n",
+    "      region, fax, homepage, _fivetran_synced, _fivetran_deleted\n",
     "      FROM renamed\n",
     ")\n",
     "\n",
-    "SELECT * FROM final\n",
+    "SELECT * FROM renamed\n",
     "```"
    ]
   },
