--- a/2-dbt-staging-and-sources/1-staging/2-staging-lab-core.ipynb
+++ b/2-dbt-staging-and-sources/1-staging/2-staging-lab-core.ipynb
@@ -69,7 +69,7 @@
     "└───models\n",
     "   │  \n",
     "   └───staging\n",
-    "    ├── stg_categories.sql\n",
+    "    ├── stg_shippers.sql\n",
     "    ├── stg_rds_customers.sql\n",
     "    └── stg_rds_suppliers.sql\n",
     "```"
@@ -382,7 +382,8 @@
     "\n",
     "git checkout main\n",
     "\n",
-    "git merge "
+    "git merge \n",
+    "```"
    ]
   },
   {
@@ -424,7 +425,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.10.13"
   },
   "vscode": {
    "interpreter": {
