--- a/2-dbt-staging-and-sources/2-sources/3-normalizing-staging-core.ipynb
+++ b/2-dbt-staging-and-sources/2-sources/3-normalizing-staging-core.ipynb
@@ -161,7 +161,7 @@
    "id": "d2220657-e861-43b9-bdc2-b0ce6af48b1d",
    "metadata": {},
    "source": [
-    "> You can view the results by running `dbt run` and then querying the companies table."
+    "> You can view the results by running `dbt run` and then query the stg_rds_companies view."
    ]
   },
   {
@@ -458,7 +458,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.10.13"
   },
   "vscode": {
    "interpreter": {
