--- a/2-dbt-staging-and-sources/2-sources/3-normalizing-staging-data.ipynb
+++ b/2-dbt-staging-and-sources/2-sources/3-normalizing-staging-data.ipynb
@@ -296,7 +296,7 @@
     "  SELECT * FROM {{ source('rds', 'customers')}} \n",
     "), \n",
     "companies as (\n",
-    "  SELECT * FROM dbt_jigsawlabsstudent.stg_rds_companies\n",
+    "  SELECT * FROM dev.stg_rds_companies\n",
     "),\n",
     "renamed as (\n",
     "    SELECT \n",
@@ -385,7 +385,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.10.13"
   },
   "vscode": {
    "interpreter": {
