--- a/2-dbt-staging-and-sources/2-sources/4-using-ref-core.ipynb
+++ b/2-dbt-staging-and-sources/2-sources/4-using-ref-core.ipynb
@@ -49,7 +49,7 @@
    "source": [
     "```sql\n",
     "companies as (\n",
-    "  SELECT * FROM dbt_jigsawlabsstudent.stg_rds_companies\n",
+    "  SELECT * FROM dev.stg_rds_companies\n",
     ")\n",
     "```"
    ]
@@ -98,30 +98,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ea407603-2c75-4dfa-8ccc-63951bf2e521",
-   "metadata": {},
-   "source": [
-    "And if we look at the lineage below, we can see that it's now updated."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "1c5eef67-6c02-4229-a4b7-459c547abff1",
-   "metadata": {},
-   "source": [
-    "> <img src=\"./updated-line.png\" width=\"100%\">"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "b86ac3c5-f82a-47d0-9c19-cf7d5c12fa6c",
-   "metadata": {},
-   "source": [
-    "So above, the lineage is indicating that the source `rds.customers` feeds into `stg_rds_companies` -- which it does -- and that both the source `rds.customers` and the `stg_rds_companies` feeds into the `stg_rds_customers` model."
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "2c0abbe8-ab82-4562-98e1-fda9b2347ea0",
    "metadata": {},
    "source": [
@@ -133,7 +109,7 @@
    "id": "56eb67b3-46ac-4c1b-9e7e-c42c6595bb6d",
    "metadata": {},
    "source": [
-    "Finally, remember that we can always see what ref is doing by switching over to the `Compiled SQL` tab in DBT, and then click `Compile` to see what our ref function compiles to."
+    "Remember that we can always see what ref is doing by navigating to our `target/compiled/models/staging/stg_rds_customers.sql` file."
    ]
   },
   {
@@ -149,7 +125,7 @@
    "id": "d7969757-15f3-4547-afd2-b279ef655cf7",
    "metadata": {},
    "source": [
-    "As we can see, using `ref('stg_rds_companies')` simply compiles to `fivetran_database.dbt_jigsawlabsstudent.stg_rds_companies`, as it should."
+    "As we can see, using `ref('stg_rds_companies')` simply compiles to `northwinds.dev.stg_rds_companies`, as it should."
    ]
   },
   {
@@ -202,7 +178,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.10.13"
   },
   "vscode": {
    "interpreter": {
