update the ref reading

--- a/2-dbt-staging-and-sources/2-sources/4-using-ref-core.ipynb
+++ b/2-dbt-staging-and-sources/2-sources/4-using-ref-core.ipynb
@@ -117,7 +117,20 @@
    "id": "77aaf539-a62e-47d4-8428-711093a8d97f",
    "metadata": {},
    "source": [
-    "> <img src=\"./compiled_sql.png\" width=\"100%\">"
+    "```sql\n",
+    "WITH customers as (\n",
+    "  SELECT * FROM \"northwinds\".\"public\".\"customers\" \n",
+    "), \n",
+    "companies as (\n",
+    "  SELECT * FROM \"northwinds\".\"dev\".\"stg_rds_companies\"\n",
+    "),\n",
+    "renamed as (\n",
+    "    SELECT \n",
+    "    concat('rds-', customer_id) as customer_id, \n",
+    "    SPLIT_PART(contact_name, ' ', 1) as first_name,\n",
+    "    SPLIT_PART(contact_name, ' ', -1) as last_name,\n",
+    "    ...\n",
+    "```"
    ]
   },
   {
