update readings for loading hubspot data

--- a/2-dbt-staging-and-sources/4-loading-tables/0-loading-additional-data.ipynb
+++ b/2-dbt-staging-and-sources/4-loading-tables/0-loading-additional-data.ipynb
@@ -43,7 +43,7 @@
    "id": "44fc4881-3118-428a-9f25-6a02edd65549",
    "metadata": {},
    "source": [
-    "Ok, so currently our data is located in the `pipeline-data` folder.  We can take a look at it here."
+    "Ok, so currently our data is located in the [pipeline-data](https://github.com/analytics-engineering-jigsaw/dbt/tree/main/pipeline-data) folder.  We can take a look at it [here](https://github.com/analytics-engineering-jigsaw/dbt/tree/main/pipeline-data)."
    ]
   },
   {
@@ -56,18 +56,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "id": "4f4fdd7a-bcf7-40fb-b9c4-aa05fa04f698",
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "hubspot_df = pd.read_csv('./pipeline-data/northwinds_hubspot.csv')"
+    "url = \"https://raw.githubusercontent.com/analytics-engineering-jigsaw/dbt/main/pipeline-data/northwinds_hubspot.csv\"\n",
+    "hubspot_df = pd.read_csv(url)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "id": "44d47ca5-e6a9-47ad-b9fe-1e3db6b7cc03",
    "metadata": {},
    "outputs": [
@@ -130,7 +131,7 @@
        "1  Ruecker, Lehner and Jakubowski  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -149,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "id": "eb24a3a9-e96b-483f-ab54-cdd2084ef8ce",
    "metadata": {},
    "outputs": [
@@ -247,14 +248,15 @@
        "1  2020-03-29T20:15:21  2020-03-31T22:31:55  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "import pandas as pd\n",
-    "mixpanel_df = pd.read_csv('./pipeline-data/northwinds_mixpanel.csv')\n",
+    "mixpanel_url = \"https://raw.githubusercontent.com/analytics-engineering-jigsaw/dbt/main/pipeline-data/northwinds_mixpanel.csv\"\n",
+    "mixpanel_df = pd.read_csv(mixpanel_url)\n",
     "mixpanel_df[:2]"
    ]
   },
@@ -418,7 +420,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.10.13"
   }
  },
  "nbformat": 4,
