--- a/2-dbt-staging-and-sources/4-loading-tables/1-loading-tables-lab-core.ipynb
+++ b/2-dbt-staging-and-sources/4-loading-tables/1-loading-tables-lab-core.ipynb
@@ -53,7 +53,7 @@
    "id": "188b8924-6a19-4b3a-96d0-618fbe651961",
    "metadata": {},
    "source": [
-    "From here, let's begin to place some of our staging files into different folders.  Create a new folder called `models/staging/rds` to place the rds files, as well as the related `sources.yaml` file.  \n",
+    "From here, let's begin to place some of our staging files into different folders.  Create a new folder called `models/staging/rds` (if you don't already have this) to place the rds files, as well as the related `sources.yaml` file.  \n",
     "\n",
     "And also create a folder called `models/staging/hubspot` that will have it's own `sources.yaml` and a model for hubspot contacts called `stg_hubspot_contacts.sql`.  \n",
     "\n",
@@ -73,7 +73,7 @@
     "    │   └── stg_hubspot_contacts.sql\n",
     "    └── rds\n",
     "        ├── sources.yaml\n",
-    "        ├── stg_categories.sql\n",
+    "        ├── stg_shipping.sql\n",
     "        ├── stg_rds_companies.sql\n",
     "        ├── stg_rds_customers.sql\n",
     "        └── stg_rds_suppliers.sql\n",
@@ -87,7 +87,7 @@
    "source": [
     "For the hubspot contacts:\n",
     "\n",
-    "1. Update the sources.yaml file in the hubspot folder, so that it references our new `dev.northwinds_hubspot` table.\n",
+    "1. Update the `sources.yaml` file in the hubspot folder, so that it references our new `dev.northwinds_hubspot` table.\n",
     "\n",
     "Then from the `stg_hubspot_contacts.sql` file, select * from that source.  Run `dbt run` to confirm that it is connected correctly. \n",
     "\n",
@@ -318,7 +318,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.10.13"
   }
  },
  "nbformat": 4,
