update normalizing staging

--- a/2-dbt-staging-and-sources/2-sources/3-normalizing-staging-core.ipynb
+++ b/2-dbt-staging-and-sources/2-sources/3-normalizing-staging-core.ipynb
@@ -224,30 +224,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "50cc6bb9-151d-43d3-bdb8-d522253721ba",
-   "metadata": {},
-   "source": [
-    "`psql -d northwinds -c \"select * from dev.stg_rds_customers order by company_id limit 3\"`"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "7ffa7c8a-dde3-41d9-b3fa-2cf82e2e6ed7",
-   "metadata": {},
-   "source": [
-    "> Your exact data will likely vary, but just make sure it is properly prepended."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "54b7ce2c-a579-4a52-92f4-64a67e53a19b",
-   "metadata": {},
-   "source": [
-    "<img src=\"./company-data.png\">"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "baf98178-433a-459f-9b4b-bb15da017449",
    "metadata": {},
    "source": [
@@ -288,6 +264,46 @@
   },
   {
    "cell_type": "markdown",
+   "id": "5726747e-d268-42c0-95d0-cf60bf444983",
+   "metadata": {},
+   "source": [
+    "* We can confirm that this worked with the following."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "76a90ca2-d5b2-462a-ace8-acf2d52af226",
+   "metadata": {},
+   "source": [
+    "`psql -d northwinds -c \"select * from dev.stg_rds_companies order by company_id limit 3\"`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7b8b5bda-ed91-401f-b731-1087213d9800",
+   "metadata": {},
+   "source": [
+    "> Your exact data will likely vary, but just make sure it is properly prepended."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7f7b283a-e3d8-4b4a-af06-84e2465e6843",
+   "metadata": {},
+   "source": [
+    "<img src=\"./company-stg.png\">"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "428bdd5f-b89e-4660-99f8-b2d30c09110f",
+   "metadata": {},
+   "source": [
+    "### Relating a customer to a company"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "fd79d844-3812-4db2-a2cd-76c1f1e34de5",
    "metadata": {},
    "source": [
@@ -301,7 +317,7 @@
    "id": "12426f0a-ffaa-4f38-aac9-3106c9927538",
    "metadata": {},
    "source": [
-    "<img src=\"./customers-stg.png\" width=\"60%\">"
+    "<img src=\"./joining-table.png\" width=\"60%\">"
    ]
   },
   {
@@ -372,10 +388,9 @@
     "    REPLACE(TRANSLATE(phone, '(,),-,.', ''), ' ', '') as updated_phone,\n",
     "    company_id\n",
     "    FROM customers \n",
-    "    JOIN companies ON companies.company_name = customers.company_name \n",
+    "    JOIN companies ON companies.name = customers.company_name \n",
     "), final as \n",
-    "(\n",
-    "  SELECT\n",
+    " (SELECT\n",
     "   customer_id,\n",
     "   first_name,\n",
     "   last_name,\n",
@@ -389,38 +404,6 @@
     ")\n",
     "SELECT * FROM final\n",
     "```"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "92c5f568-56d0-4557-aa20-362a4f7381d5",
-   "metadata": {},
-   "source": [
-    "And in our initial results we get the following:"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "80e98352-f9c1-4e5c-928a-6df408c97e40",
-   "metadata": {},
-   "source": [
-    "`psql -d northwinds -c \"select * from dev.stg_rds_customers limit 3\"`"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "65bd74b6-e998-4484-b5b5-8292fd6814c6",
-   "metadata": {},
-   "source": [
-    "<img src=\"./final-select.png\" width=\"100%\">"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "354fd0d8-b771-4736-875a-b426026a02e9",
-   "metadata": {},
-   "source": [
-    "> Notice that we no longer have the country in the customers table, and that has been moved to the companies table."
    ]
   },
   {
