hubspot data lab

--- a/2-dbt-staging-and-sources/4-loading-tables/0-loading-additional-data.ipynb
+++ b/2-dbt-staging-and-sources/4-loading-tables/0-loading-additional-data.ipynb
@@ -281,7 +281,9 @@
    "id": "fbc9a6fa-a1a4-478a-93cb-d30c2a6ac8b2",
    "metadata": {},
    "source": [
-    "First download our pipeline data.  Then, go to your dbt repository, and create a new branch called `seed_csv_data`.\n",
+    "First download our pipeline data.  Remember, that data is located [here](https://github.com/analytics-engineering-jigsaw/dbt/tree/main/pipeline-data).\n",
+    "\n",
+    "Then, go to your dbt repository, and create a new branch called `seed_csv_data`.\n",
     "\n",
     "Then from there, you'll notice that your dbt repository has a folder called `seeds`.  This is where the csv data should be.  Move the `northwinds_hubspot.csv` file and the `northinds_mixpanel.csv` into the `seeds` folder.\n",
     "\n",
